--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div class="row">
 
-        <div class="col-12 col-sm-6 col-md-4 d-flex justify-content-center mb-4">
+        <div class="d-flex justify-content-evenly">
 
              
                 <div class="card" style="width: 15rem; height: 25rem;">
